--- a/HinkovT_IvanovaM_App/Course.xaml
+++ b/HinkovT_IvanovaM_App/Course.xaml
@@ -35,7 +35,7 @@
         <Rectangle Fill="AliceBlue" Grid.Row="1" HorizontalAlignment="Left" Height="131" Stroke="White" VerticalAlignment="Top" Width="393" />-->
         <Rectangle Fill="AliceBlue" HorizontalAlignment="Left" Height="4" Stroke="AliceBlue" VerticalAlignment="Top" Width="368" Margin="10,29.667,0,0" Grid.Row="1"/>
         <TextBlock HorizontalAlignment="Left" Margin="-7,23,-5,0" TextWrapping=" Wrap" VerticalAlignment="Top" FontSize=" 50" Width="400" TextAlignment=" Center" FontFamily="Constantia" Grid.RowSpan="2" Text="Course"/>
-        <Label Content="Name of the Course:" Foreground=" Black" FontSize="20" Grid.Row="6" HorizontalAlignment=" Center" FontFamily="Constantia" VerticalAlignment=" Center" Width="400" Margin="10,0.333,-22,27.333" Height="31" ></Label>
+        <Label Content="Course ID" Foreground=" Black" FontSize="20" Grid.Row="6" HorizontalAlignment=" Center" FontFamily="Constantia" VerticalAlignment=" Center" Width="400" Margin="10,0.333,-22,27.333" Height="31" ></Label>
         <TextBox x:Name="txtName_of_the_Course" Background=" White" Foreground=" Black" FontSize=" 10" Margin="10,31.333,10,58" Grid.Row="6" Grid.RowSpan="2"/>
 
         <Button Content=" Submit" Background="Lavender" Foreground=" Black" FontSize="20" HorizontalAlignment=" Center" VerticalAlignment="Top" Click="SubmitCourse_Click" FontFamily="Constantia" Margin="127,27.667,144,0" Grid.Row="7" Height="55" Grid.RowSpan="2" Width="117">
