--- a/HinkovT_IvanovaM_App/LogInMain.xaml
+++ b/HinkovT_IvanovaM_App/LogInMain.xaml
@@ -40,7 +40,7 @@
         <Label Content="Password:" Foreground=" Black" FontSize="20" Grid.Row="7" HorizontalAlignment=" Center" FontFamily="Constantia" VerticalAlignment=" Center" Width="400" Margin="10,21.667,-22,7" Height="30"/>
         <TextBox x:Name="txtUsername" Background=" White" Foreground=" Black" FontSize=" 10" Margin="10,53.667,10,37" Grid.Row="6" Grid.RowSpan="2"/>
         <TextBox x:Name="txtID" Background=" White" Foreground=" Black" FontSize=" 10" Margin="10,48.333,10,42.333" Grid.Row="5" Grid.RowSpan="2"/>
-        <TextBox x:Name="txtPassword" Background=" White" Foreground=" Black" FontSize=" 10" Margin="10,53.333,10,37.667" Grid.Row="7" Grid.RowSpan="2"/>
+        <PasswordBox x:Name="txtPassword" Background=" White" Foreground=" Black" FontSize=" 10" Margin="10,53.333,10,37.667" Grid.Row="7" Grid.RowSpan="2"/>
         <Button Content=" Submit" Background="Lavender" Foreground=" Black" FontSize="20" HorizontalAlignment=" Center" VerticalAlignment="Top" Click="Submit_Click" FontFamily="Constantia" Margin="131,3.667,140,0" Grid.Row="9" Height="55" Width="117">
             <Button.Resources>
                 <Style TargetType="Border">
