--- a/HinkovT_IvanovaM_App/SignUpStudent.xaml
+++ b/HinkovT_IvanovaM_App/SignUpStudent.xaml
@@ -26,29 +26,29 @@
         <Border Margin="0,0,0.333,0" Grid.RowSpan="14">
             <Border.Background>
                 <LinearGradientBrush>
-                    <GradientStop Color="SlateGray" Offset="0.4"/>
-                    <GradientStop Color="AliceBlue" Offset="0.8"/>
+                    <GradientStop Color="Orange" Offset="0.4"/>
+                    <GradientStop Color="DarkCyan" Offset="0.8"/>
                 </LinearGradientBrush>
             </Border.Background>
         </Border>
         <!--<Rectangle Fill="AliceBlue" Grid.Row="0" HorizontalAlignment="Left" Height="131" Stroke="White" VerticalAlignment="Top" Width="393" />
         <Rectangle Fill="AliceBlue" Grid.Row="1" HorizontalAlignment="Left" Height="131" Stroke="White" VerticalAlignment="Top" Width="393" />-->
-        <Rectangle Fill="AliceBlue" HorizontalAlignment="Left" Height="4" Stroke="AliceBlue" VerticalAlignment="Top" Width="368" Margin="10,29.667,0,0" Grid.Row="1"/>
-        <TextBlock HorizontalAlignment="Left" Margin="0,23,-12,0" TextWrapping=" Wrap" VerticalAlignment="Top" FontSize=" 50" Width="400" TextAlignment=" Center" FontFamily="Constantia" Grid.RowSpan="2" Text="Sign Up to Study"/>
-        <Label Content="First name:" Foreground=" Black" FontSize="20" Grid.Row="4" HorizontalAlignment=" Center" FontFamily="Constantia" VerticalAlignment="Top" Width="400" Margin="10,0,-22,0" Height="45" ></Label>
-        <Label Content="Last name:" Foreground=" Black" FontSize="20" Grid.Row="4" HorizontalAlignment=" Center" FontFamily="Constantia" VerticalAlignment=" Center" Width="400" Margin="10,59,-22,27.667" Height="32" Grid.RowSpan="2" ></Label>
-        <Label Content="Email:" Foreground=" Black" FontSize="20" Grid.Row="6" HorizontalAlignment=" Center" FontFamily="Constantia" VerticalAlignment=" Center" Width="400" Margin="10,0,-22,27.333" Height="32" ></Label>
-        <Label Content="Username:" Foreground=" Black" FontSize="20" Grid.Row="6" HorizontalAlignment=" Center" FontFamily="Constantia" VerticalAlignment=" Center" Width="400" Margin="10,59,-22,27" Height="32" Grid.RowSpan="2"/>
-        <Label Content="Password:" Foreground=" Black" FontSize="20" Grid.Row="8" HorizontalAlignment=" Center" FontFamily="Constantia" VerticalAlignment=" Center" Width="400" Margin="10,0,-22,27.667" Height="31"></Label>
-        <Label Content="Phone Number:" Foreground=" Black" FontSize="20" Grid.Row="9" HorizontalAlignment=" Center" FontFamily="Constantia" VerticalAlignment=" Center" Width="400" Margin="10,0.333,-22,26.333" Height="32"></Label>
-        <Label Content="Aadhar:" Foreground=" Black" FontSize="20" Grid.Row="9" HorizontalAlignment=" Center" FontFamily="Constantia" VerticalAlignment=" Center" Width="400" Margin="10,58.333,-22,26" Height="33" Grid.RowSpan="2"></Label>
-        <TextBox x:Name="txtFirst_name" Background=" White" Foreground=" Black" FontSize=" 10" Margin="10,32,10,59" Grid.Row="4" Grid.RowSpan="2"/>
-        <TextBox x:Name="txtSecond_name" Background=" White" Foreground=" Black" FontSize=" 10" Margin="10,32,10,59" Grid.Row="5" Grid.RowSpan="2"/>
-        <TextBox x:Name="txtEmail" Background=" White" Foreground=" Black" FontSize=" 10" Margin="10,32,10,59" Grid.Row="6" Grid.RowSpan="2"/>
-        <TextBox x:Name="txtUsername" Background=" White" Foreground=" Black" FontSize=" 10" Margin="10,32,10,59" Grid.Row="7" Grid.RowSpan="2"/>
-        <TextBox x:Name="txtPhone_Number" Background=" White" Foreground=" Black" FontSize=" 10" Margin="10,32,10,59" Grid.Row="9" Grid.RowSpan="2"/>
-        <TextBox x:Name="txtAadhar" Background=" White" Foreground=" Black" FontSize=" 10" Margin="10,32,10,59" Grid.Row="10" Grid.RowSpan="2"/>
-        <Button Content=" Submit" Background="Lavender" Foreground=" Black" FontSize="20" HorizontalAlignment=" Center" VerticalAlignment="Top" Click="Submit_Click" FontFamily="Constantia" Margin="127,10.333,144,0" Grid.Row="12" Height="55" Grid.RowSpan="2" Width="117">
+        <Rectangle Fill="White" HorizontalAlignment="Left" Height="4" Stroke="AliceBlue" VerticalAlignment="Top" Width="388" Margin="0,29.333,0,0" Grid.Row="1"/>
+        <TextBlock HorizontalAlignment="Left" Margin="0,23,-12,0" TextWrapping=" Wrap" VerticalAlignment="Top" FontSize=" 38" Width="400" TextAlignment=" Center" FontFamily="Monospac821 BT" Grid.RowSpan="2" Text="Sign Up to Study"/>
+        <Label Content="First name:" Foreground=" Black" FontSize="20" Grid.Row="4" HorizontalAlignment=" Center" FontFamily="Monospac821 BT" VerticalAlignment="Top" Width="400" Margin="10,0,-22,0" Height="45" ></Label>
+        <Label Content="Last name:" Foreground=" Black" FontSize="20" Grid.Row="4" HorizontalAlignment=" Center" FontFamily="Monospac821 BT" VerticalAlignment=" Center" Width="400" Margin="10,59,-22,27.667" Height="32" Grid.RowSpan="2" ></Label>
+        <Label Content="Email:" Foreground=" Black" FontSize="20" Grid.Row="6" HorizontalAlignment=" Center" FontFamily="Monospac821 BT" VerticalAlignment=" Center" Width="400" Margin="10,0,-22,27.333" Height="32" ></Label>
+        <Label Content="Username:" Foreground=" Black" FontSize="20" Grid.Row="6" HorizontalAlignment=" Center" FontFamily="Monospac821 BT" VerticalAlignment=" Center" Width="400" Margin="10,59,-22,27" Height="32" Grid.RowSpan="2"/>
+        <Label Content="Password:" Foreground=" Black" FontSize="20" Grid.Row="8" HorizontalAlignment=" Center" FontFamily="Monospac821 BT" VerticalAlignment=" Center" Width="400" Margin="10,0,-22,27.667" Height="31"></Label>
+        <Label Content="Phone Number:" Foreground=" Black" FontSize="20" Grid.Row="9" HorizontalAlignment=" Center" FontFamily="Monospac821 BT" VerticalAlignment=" Center" Width="400" Margin="10,0.333,-22,26.333" Height="32"></Label>
+        <Label Content="Aadhar:" Foreground=" Black" FontSize="20" Grid.Row="9" HorizontalAlignment=" Center" FontFamily="Monospac821 BT" VerticalAlignment=" Center" Width="400" Margin="10,58.333,-22,26" Height="33" Grid.RowSpan="2"></Label>
+        <TextBox x:Name="txtFirst_name" Background=" White" Foreground=" Black" FontSize=" 20" Margin="10,32,10,59" Grid.Row="4" Grid.RowSpan="2"/>
+        <TextBox x:Name="txtSecond_name" Background=" White" Foreground=" Black" FontSize=" 20" Margin="10,32,10,59" Grid.Row="5" Grid.RowSpan="2"/>
+        <TextBox x:Name="txtEmail" Background=" White" Foreground=" Black" FontSize=" 20" Margin="10,32,10,59" Grid.Row="6" Grid.RowSpan="2"/>
+        <TextBox x:Name="txtUsername" Background=" White" Foreground=" Black" FontSize=" 20" Margin="10,32,10,59" Grid.Row="7" Grid.RowSpan="2"/>
+        <TextBox x:Name="txtPhone_Number" Background=" White" Foreground=" Black" FontSize=" 20" Margin="10,32,10,59" Grid.Row="9" Grid.RowSpan="2"/>
+        <TextBox x:Name="txtAadhar" Background=" White" Foreground=" Black" FontSize=" 20" Margin="10,32,10,59" Grid.Row="10" Grid.RowSpan="2"/>
+        <Button Content="Submit" Background="White" BorderBrush="White" Foreground=" Black" FontSize="20" HorizontalAlignment=" Center" VerticalAlignment="Top" Click="Submit_Click" FontFamily="Monospac821 BT" Margin="127,10.333,144,0" Grid.Row="12" Height="55" Grid.RowSpan="2" Width="117">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="30"/>
