--- a/HinkovT_IvanovaM_App/LogInMain.xaml
+++ b/HinkovT_IvanovaM_App/LogInMain.xaml
@@ -26,22 +26,22 @@
         <Border Margin="0,0,0.333,0" Grid.RowSpan="14">
             <Border.Background>
                 <LinearGradientBrush>
-                    <GradientStop Color="SlateGray" Offset="0.4"/>
-                    <GradientStop Color="AliceBlue" Offset="0.8"/>
+                    <GradientStop Color="Orange" Offset="0.4"/>
+                    <GradientStop Color="DarkCyan" Offset="0.8"/>
                 </LinearGradientBrush>
             </Border.Background>
         </Border>
         <!--<Rectangle Fill="AliceBlue" Grid.Row="0" HorizontalAlignment="Left" Height="131" Stroke="White" VerticalAlignment="Top" Width="393" />
         <Rectangle Fill="AliceBlue" Grid.Row="1" HorizontalAlignment="Left" Height="131" Stroke="White" VerticalAlignment="Top" Width="393" />-->
-        <Rectangle Fill="AliceBlue" HorizontalAlignment="Left" Height="4" Stroke="AliceBlue" VerticalAlignment="Top" Width="368" Margin="10,29.667,0,0" Grid.Row="1"/>
-        <TextBlock HorizontalAlignment="Left" Margin="-7,23,-5,0" TextWrapping=" Wrap" VerticalAlignment="Top" FontSize=" 50" Width="400" TextAlignment=" Center" FontFamily="Constantia" Grid.RowSpan="2" Text="Log In "/>
-        <Label Content="Username:" Foreground=" Black" FontSize="20" Grid.Row="6" HorizontalAlignment=" Center" FontFamily="Constantia" VerticalAlignment=" Center" Width="400" Margin="10,16.333,-22,0.333" Height="42"/>
-        <Label Content="ID:" Foreground=" Black" FontSize="20" Grid.Row="5" HorizontalAlignment=" Center" FontFamily="Constantia" VerticalAlignment=" Center" Width="400" Margin="10,9.667,-22,7.667" Height="42"/>
-        <Label Content="Password:" Foreground=" Black" FontSize="20" Grid.Row="7" HorizontalAlignment=" Center" FontFamily="Constantia" VerticalAlignment=" Center" Width="400" Margin="10,21.667,-22,7" Height="30"/>
-        <TextBox x:Name="txtUsername" Background=" White" Foreground=" Black" FontSize=" 10" Margin="10,53.667,10,37" Grid.Row="6" Grid.RowSpan="2"/>
-        <TextBox x:Name="txtID" Background=" White" Foreground=" Black" FontSize=" 10" Margin="10,48.333,10,42.333" Grid.Row="5" Grid.RowSpan="2"/>
-        <PasswordBox x:Name="txtPassword" Background=" White" Foreground=" Black" FontSize=" 10" Margin="10,53.333,10,37.667" Grid.Row="7" Grid.RowSpan="2"/>
-        <Button Content=" Submit" Background="Lavender" Foreground=" Black" FontSize="20" HorizontalAlignment=" Center" VerticalAlignment="Top" Click="Submit_Click" FontFamily="Constantia" Margin="131,3.667,140,0" Grid.Row="9" Height="55" Width="117">
+        <Rectangle Fill="White" HorizontalAlignment="Left" Height="4" Stroke="White" VerticalAlignment="Top" Width="387" Margin="1,29.333,0,0" Grid.Row="1"/>
+        <TextBlock HorizontalAlignment="Left" Margin="1,23,-13,0" TextWrapping=" Wrap" VerticalAlignment="Top" FontSize=" 50" Width="400" TextAlignment=" Center" FontFamily="Monospac821 BT" Grid.RowSpan="2" Text="Log In "/>
+        <Label Content="Username:" Foreground=" Black" FontSize="20" Grid.Row="6" HorizontalAlignment=" Center" FontFamily="Monospac821 BT" VerticalAlignment=" Center" Width="400" Margin="10,16.333,-22,0.333" Height="42"/>
+        <Label Content="ID:" Foreground=" Black" FontSize="20" Grid.Row="5" HorizontalAlignment=" Center" FontFamily="Monospac821 BT" VerticalAlignment=" Center" Width="400" Margin="10,9.667,-22,7.667" Height="42"/>
+        <Label Content="Password:" Foreground=" Black" FontSize="20" Grid.Row="7" HorizontalAlignment=" Center" FontFamily="Monospac821 BT" VerticalAlignment=" Center" Width="400" Margin="10,21.667,-22,7" Height="30"/>
+        <TextBox x:Name="txtUsername" Background=" White" Foreground=" Black" FontSize=" 20" Margin="10,53.667,10,37" Grid.Row="6" Grid.RowSpan="2"/>
+        <TextBox x:Name="txtID" Background=" White" Foreground=" Black" FontSize="20" Margin="10,48.333,10,42.333" Grid.Row="5" Grid.RowSpan="2"/>
+        <PasswordBox x:Name="txtPassword" Background=" White" Foreground=" Black" FontSize="20" Margin="10,53.333,10,37.667" Grid.Row="7" Grid.RowSpan="2"/>
+        <Button Content="Submit" BorderBrush="White" Background="White" Foreground=" Black" FontSize="20" HorizontalAlignment=" Center" VerticalAlignment="Top" Click="Submit_Click" FontFamily="Monospac821 BT" Margin="131,3.667,140,0" Grid.Row="9" Height="55" Width="117">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="30"/>
