--- a/HinkovT_IvanovaM_App/SignUpMain.xaml
+++ b/HinkovT_IvanovaM_App/SignUpMain.xaml
@@ -26,23 +26,23 @@
         <Border Margin="0,0,0.333,0" Grid.RowSpan="14">
             <Border.Background>
                 <LinearGradientBrush>
-                    <GradientStop Color="SlateGray" Offset="0.4"/>
-                    <GradientStop Color="AliceBlue" Offset="0.8"/>
+                    <GradientStop Color="Orange" Offset="0.4"/>
+                    <GradientStop Color="DarkCyan" Offset="0.8"/>
                 </LinearGradientBrush>
             </Border.Background>
         </Border>
         <!--<Rectangle Fill="AliceBlue" Grid.Row="0" HorizontalAlignment="Left" Height="131" Stroke="White" VerticalAlignment="Top" Width="393" />
         <Rectangle Fill="AliceBlue" Grid.Row="1" HorizontalAlignment="Left" Height="131" Stroke="White" VerticalAlignment="Top" Width="393" />-->
-        <Rectangle Fill="AliceBlue" HorizontalAlignment="Left" Height="4" Stroke="AliceBlue" VerticalAlignment="Top" Width="368" Margin="10,29.667,0,0" Grid.Row="1"/>
-        <TextBlock HorizontalAlignment="Left" Margin="0,23,-12,0" TextWrapping=" Wrap" VerticalAlignment="Top" FontSize=" 50" Width="400" TextAlignment=" Center" FontFamily="Constantia" Grid.RowSpan="2" Text="Sign Up"/>
-        <Button Content="Sign Up as Teacher" Background="Lavender" Foreground=" Black" FontSize="20" HorizontalAlignment=" Center" VerticalAlignment="Top" Click="SignUpTeach_Click" FontFamily="Constantia" Margin="72,50.667,75,0" Grid.Row="5" Height="67" Grid.RowSpan="2" Width="241">
+        <Rectangle Fill="White" HorizontalAlignment="Left" Height="4" Stroke="AliceBlue" VerticalAlignment="Top" Width="388" Margin="0,29.667,0,0" Grid.Row="1"/>
+        <TextBlock HorizontalAlignment="Left" Margin="0,23,-12,0" TextWrapping=" Wrap" VerticalAlignment="Top" FontSize=" 50" Width="400" TextAlignment=" Center" FontFamily="Monospac821 BT" Grid.RowSpan="2" Text="Sign Up"/>
+        <Button Content="Sign Up as A Teacher" Background="White" BorderBrush="White" Foreground=" Black" FontSize="18" HorizontalAlignment=" Center" VerticalAlignment="Top" Click="SignUpTeach_Click" FontFamily="Monospac821 BT" Margin="72,50.667,75,0" Grid.Row="5" Height="67" Grid.RowSpan="2" Width="241">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="30"/>
                 </Style>
             </Button.Resources>
         </Button>
-        <Button Content="Sign Up as a Student" Background="Lavender" Foreground=" Black" FontSize="20" HorizontalAlignment=" Center" VerticalAlignment="Top" Click="SignUpStudy_Click" FontFamily="Constantia" Margin="72,0,75,0" Grid.Row="8" Height="67" Grid.RowSpan="2" Width="241">
+        <Button Content="Sign Up as a Student" Background="White" BorderBrush="White" Foreground=" Black" FontSize="18" HorizontalAlignment=" Center" VerticalAlignment="Top" Click="SignUpStudy_Click" FontFamily="Monospac821 BT" Margin="72,0,75,0" Grid.Row="8" Height="67" Grid.RowSpan="2" Width="241">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="30"/>
